# cgcnn-custom

./: .gitignore  atom_init.json  checkpoint.pth.tar  cif_explore.ipynb  main.py  model_best.pth.tar  pyproject.toml  test_results.csv  常用命令
cgcnn/: data.py  model.py
